# payment-gateway-challenge-python

./: pyproject.toml
payment_gateway_api/: app.py  bank_client.py  models.py  repository.py  serializers.py
tests/: test_get_payment.py  test_post_payment.py
